--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
-    "watch":"node-sass --watch src/resourses/scss/ --output src/public/css/",
+    "watch": "node-sass --watch src/resourses/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,13 +24,23 @@
     "url": "https://github.com/HoangDuyKa/blog/issues"
   },
   "homepage": "https://github.com/HoangDuyKa/blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all "
+  },
+  "hooks": {
+    "pre-commit": "lint-staged"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2"
   },
+  
   "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.2.4"
   }
 }
