--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "lint-staged": {
     "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all "
   },
-  "hooks": {
-    "pre-commit": "lint-staged"
+  "husky":{
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "express": "^4.18.2",
