--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful":"lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resourses/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,7 +26,7 @@
   },
   "homepage": "https://github.com/HoangDuyKa/blog#readme",
   "lint-staged": {
-    "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all "
+    "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all"
   },
   "husky":{
     "hooks": {
