--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all"
   },
   "husky": {
-      "pre-commit": "lint-staged"
+    "hooks":{
+      "pre-commit": "npm run beautiful"
+    }
   },
   "dependencies": {
     "express": "^4.18.2",
