--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "beautiful":"lint-staged",
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resourses/scss/ --output src/public/css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
     "src/**/*.{js,json,scss}": "prettier --write --tab-width 4 --single-quote --trailing-comma all"
   },
   "husky": {
-    "hooks":{
+    "hooks": {
       "pre-commit": "npm run beautiful"
     }
   },
@@ -37,7 +38,6 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2"
   },
-  
   "devDependencies": {
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
